# esp-d

./: CMakeLists.txt  README.md
components/core/crazyflie/hal/src/: sensors.c  sensors_mpu6050_hm5883L_ms5611.c
components/core/crazyflie/modules/src/: crtp_commander_generic.c  crtp_localization_service.c
components/drivers/i2c_bus/: i2c_drv.c
components/drivers/i2c_bus/include/: i2cdev.h
components/drivers/i2c_devices/mpu6050/: mpu6050.c
components/i2c_bus/: i2cdev_esp32.c
components/motors/: CMakeLists.txt  motors.c
components/motors/include/: motors.h
main/: main.c
